Add API sign up get all
