# docs/swagger.yaml
@@ -884,6 +884,50 @@ paths:
       summary: Sign Up
       tags:
       - user
+  /api/signup-get-all:
+    post:
+      consumes:
+      - multipart/form-data
+      description: Sign Up And Get All Data
+      parameters:
+      - in: formData
+        name: email
+        required: true
+        type: string
+      - in: formData
+        name: name
+        required: true
+        type: string
+      - in: formData
+        name: password
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.LoginGetAllDataResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/response.ErrorResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/response.ErrorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/response.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/response.ErrorResponse'
+      summary: Sign Up And Get All Data
+      tags:
+      - mobile
   /api/user/update:
     put:
       consumes:
